[gd_scene load_steps=54 format=2]

[ext_resource path="res://charactors/Wizard Pack/Death.png" type="Texture" id=1]
[ext_resource path="res://charactors/Wizard Pack/Idle.png" type="Texture" id=2]
[ext_resource path="res://charactors/Wizard Pack/Attack1.png" type="Texture" id=3]
[ext_resource path="res://charactors/Wizard Pack/Jump.png" type="Texture" id=4]
[ext_resource path="res://charactors/Wizard Pack/Attack2.png" type="Texture" id=5]
[ext_resource path="res://charactors/Wizard Pack/Run.png" type="Texture" id=6]
[ext_resource path="res://charactors/Wizard Pack/Fall.png" type="Texture" id=7]
[ext_resource path="res://scenes/players/wizard/Wizard.gd" type="Script" id=8]
[ext_resource path="res://textures/light/alphaglow_sharp.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 60.4793
height = 0.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "Attack1",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Attack2",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 85.9344, 56.3725 )

[node name="Wizard" type="Node2D" groups=[
"player",
]]
script = ExtResource( 8 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -2.59341, -16.8334 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 7.49153, -4.12035 )
frames = SubResource( 43 )
animation = "Attack1"
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
current = true
limit_bottom = 600
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="KinematicBody2D"]
visible = false
texture = ExtResource( 9 )
texture_scale = 2.0
energy = 1.5
mode = 2
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="HitArea" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/HitArea"]
position = Vector2( 0, -15.8919 )
shape = SubResource( 44 )
[connection signal="animation_finished" from="KinematicBody2D/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="KinematicBody2D/HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="area_exited" from="KinematicBody2D/HitArea" to="." method="_on_HitArea_area_exited"]
